[tool.poetry]
name = "xla"
version = "0.1.0"
homepage = "https://github.com/shawwn/xla"
description = "XLA utilities in pure Python"
authors = ["Shawn Presser <shawnpresser@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
