[tool.poetry]
name = "xla"
version = "0.1.0"
homepage = "https://github.com/shawwn/xla"
description = "XLA utilities in pure Python"
authors = ["Shawn Presser <shawnpresser@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
python-semantic-release = "^7.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
include_additional_files = "setup.py"
major_on_zero = false
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
